# aipi540_depth

./: .gitignore  README.md  depth_ds.py  depth_model.py  ds.py  pyproject.toml  req.txt  run_JEPA.py  train_depth.py  train_depth.sh  train_depth_jepa.py  train_jepa.sh  train_jepa_vit.sh
logs/: depth_10533120.err  depth_10533132.err  depth_10533133.err
src/aipi540_depth/test/: inference.py
src/aipi540_depth/training/: train_depth.py  train_depth_jepa.py
