[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aipi540_depth"
version = "0.1.0"
description = "Depth estimation model for AIPI540"
authors = [
    { name = "Michael Saju" }
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]